# infopt

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README.tf2.md  exp_bpnn_optim.py  exp_hyp_optim.py  exp_neuron_optim_mnist.py  exp_nnet_optim.py  exp_sim_optim.py  exp_sim_optim_simple.py  exp_zro2_synth.py  index.html  nb_gpinfacq_playground.ipynb  nb_nnacq_playground.ipynb  nb_nnmodel_playground.ipynb  nb_nracq_playground.ipynb  nb_nrmodel_playground.ipynb  nb_uncertainty_analysis_ackley.ipynb  plot_exp_sim_optim_simple.py  plot_offline.py  pyproject.toml  run_exp_sim_optim_simple.py  runs.md  test_mcdropout_ackley.ipynb  test_mcdropout_randomnn.ipynb  test_torch2tf_ackley.ipynb  test_torch2tf_ihvp.ipynb  test_torch2tf_randomnn.ipynb  xortree.py
.githooks/: buildpdf.sh  isort.sh
.github/utils/: papersetup.sh
.github/workflows/: build-website.yml  test-package.yml
assets/: main.css  main.js
exputils/: models.py  models_bpnn.py  models_tf.py  objectives.py  objectives_bpnn.py  optimization.py  parsing.py  plotting.py
infopt/: gpinfacq.py  gpinfacq_mcmc.py  ihvp.py  ihvp_tf.py  nnacq.py  nnacq_tf.py  nnmodel.py  nnmodel_mcd_tf.py  nnmodel_tf.py  nrmodel.py  recalibration.py  utils.py
paper/: main.md  references.bib
paper/fig/src/: alg.md  mnist.afdesign  synth.afdesign
results/xortree/gp_ei/: run_1  run_10  run_2  run_3  run_4  run_5  run_6  run_7  run_8  run_9
results/xortree/gp_inf/: run_1  run_10  run_2  run_3  run_4  run_5  run_6  run_7  run_8  run_9
results/xortree/gp_lcb/: run_1  run_10  run_2  run_3  run_4  run_5  run_6  run_7  run_8  run_9
results/xortree/nn_inf/: run_1  run_10  run_2  run_3  run_4  run_5  run_6  run_7  run_8  run_9
results/xortree_discrete/gp_ei/: run_1  run_10  run_2  run_3  run_4  run_5  run_6  run_7  run_8  run_9
results/xortree_discrete/gp_inf/: run_4  run_5  run_9
results/xortree_discrete/gp_lcb/: run_1  run_2  run_3  run_4  run_5  run_7  run_8
results/xortree_discrete/nn_inf/: run_1  run_10  run_2  run_3  run_4  run_5  run_6  run_7  run_8  run_9
runs/: 2021-07-11.sh  2021-08-04.sh  2021-08-13.sh
tests/: test_gpinfacq.py  test_ihvp.py  test_ihvp_tf.py
